# call-center-voice-agent-accelerator

./: .azureignore  ADD_RATE_LIMIT_ENV_VARS.md  AI_EVALUATION_CONFIG.md  AI_EVALUATION_FINAL_SETUP.md  AI_EVALUATION_QUICKSTART.md  AI_EVALUATION_SYSTEM.md  AUTOMATED_SETUP.md  AUTOMATION_SUMMARY.md  AZURE_AD_CONTAINER_APP_DEPLOYMENT.md  COPY_SEARCH_DATA.md  ENVIRONMENT_VARIABLES_SETUP.md  FEEDBACK_SYSTEM_IMPLEMENTATION_SUMMARY.md  FEEDBACK_SYSTEM_KEY_VAULT_COMPLETE.md  FEEDBACK_SYSTEM_QUICK_REFERENCE.md  README.md  ai_system_intructions.txt  azure.yaml  copy_search_data.py  copy_search_data.sh  test_apostrophe.py  test_multilang_presidio.py  test_pii_check.py  test_presidio.py  test_presidio_integration.py  test_rate_limiting.sh  update-env-vars.sh
server/: .env-sample-with-auth.txt  .env-sample-with-search.txt  AZURE_AD_AUTH_SETUP.md  AZURE_AD_IMPLEMENTATION_SUMMARY.md  AZURE_SEARCH_SETUP.md  Dockerfile  FUNCTION_CALLING_SETUP.md  RATE_LIMITING_SETUP.md  TROUBLESHOOTING_AZURE_SEARCH.md  VECTOR_SEARCH_SETUP.md  analyze_test_logs.py  delete_index.py  list_deployments.py  pyproject.toml  requirements.txt  server.py  test_ai_evaluator.py  test_auth.py
server/app/: ai_evaluator.py  analytics.py  auth.py  conversation_logger.py  conversation_logger.py.backup  document_processor.py  encryption_utils.py  feedback_indexer.py  gdpr_compliance.py  pii_anonymizer.py  pii_anonymizer_presidio.py  pii_patterns.py  rate_limiter.py
server/app/handler/: acs_event_handler.py  acs_media_handler.py  aoai_text_handler.py
server/static/: audio-processor.js  config.html  index.html  mic-processor.js  test-bot.html
server/static/admin/: admin.css  admin.js  index.html
(+36 files in other folders)
